# rustcast

./: .gitignore  Cargo.toml  setup.sh
.agent/rules/: architecture.md
apps/: apps.json  theme.json
core-proto/: Cargo.toml
core-proto/src/: lib.rs
mobile-remote/: package-lock.json  package.json
mobile-remote/src/: index.html  main.js  styles.css
mobile-remote/src-tauri/: Cargo.toml  tauri.conf.json
mobile-remote/src-tauri/src/: lib.rs  main.rs
packaging/arch/: PKGBUILD  com.vibecast.SystemBridge.conf  system-bridge.service
remote-server/: Cargo.toml
remote-server/src/: main.rs  remote_input.rs  retention_manager.rs
shell/src/: index.html  main.js  styles.css
shell/src-tauri/: Cargo.toml  tauri.conf.json
shell/src-tauri/src/: app_loader.rs  lib.rs  main.rs
system-bridge/: Cargo.toml
system-bridge/src/: audio_manager.rs  bluetooth_agent.rs  main.rs  system_manager.rs  wifi_manager.rs
