[package]
name = "remote-server"
version = "0.1.0"
edition = "2024"

[dependencies]
core-proto = { version = "0.1.0", path = "../core-proto" }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite"] }
sysinfo = "0.38.4"
tokio = { version = "1.50.0", features = ["rt-multi-thread", "macros", "time"] }
