[package]
name = "remote-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["ws"] }
core-proto = { version = "0.1.0", path = "../core-proto" }
futures-util = "0.3.32"
mdns-sd = "0.18.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite"] }
sysinfo = "0.38.4"
tokio = { version = "1.50.0", features = ["rt-multi-thread", "macros", "time", "signal"] }
tokio-tungstenite = "0.28.0"
