[package]
name = "system-bridge"
version = "0.1.0"
edition = "2024"

[dependencies]
arch-toolkit = "0.2.0"
bluer = "0.17.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread", "time"] }
tokio-cron-scheduler = "0.15.1"
zbus = "5.14.0"
